# nr_micro_shell

./: CMakeLists.txt  README_EN.md  readme.md
examples/simulator/: makefile  simulator.c
examples/test/: makefile  test.c
inc/: ansi_def.h  commands.h  nr_micro_shell.h  nr_micro_shell_config.h
src/: ansi_port.c  main.cpp  nr_console_drv.c  nr_micro_shell.c  nr_virtual_console.c
src/commands/: cat.cpp  echo.cpp  ping.cpp  serial.cpp  uname.cpp
